// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`saveExperiment action Dispatches a notification when fetch fails. 1`] = `
Array [
  Object {
    "type": "experiments/saving",
  },
  Object {
    "payload": Object {
      "error": "Error saving experiment",
    },
    "type": "experiments/error",
  },
]
`;

exports[`saveExperiment action Dispatches correct actions when action is successful 1`] = `
Array [
  Object {
    "type": "experiments/saving",
  },
  Object {
    "type": "experiments/saved",
  },
]
`;
